# typstyle

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  justfile  rustfmt.toml  test.typ
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/scripts/: generate-benchmark-report.nu
.github/workflows/: bench-comment.yml  bench-job.yml  bench-pr.yml  bench.yml  build-binaries.yml  build-docs.yml  build-playground.yml  ci.yml  claude.yml  gh-pages.yml  publish-crates.yml  publish-wasm.yml  release.yml  test-and-release.yml
contrib/typstyle-embedded/: README.md
crates/typstyle/: Cargo.toml
crates/typstyle-consistency/: Cargo.toml
crates/typstyle-consistency/src/: cmp.rs  err.rs  harness.rs  image_diff.rs  lib.rs  text_diff.rs  world.rs
crates/typstyle-consistency/tests/: broken_formatter.rs
crates/typstyle-core/: Cargo.toml
crates/typstyle-typlugin/: Cargo.toml
crates/typstyle-wasm/: Cargo.toml  README.md  build.rs
docs/: book.typ  deps.typ  ebook.typ
docs/pages/: architecture.typ  changelog.typ  cli-usage.typ  dev-guide.typ  escape-hatch.typ  features.typ  installation.typ  introduction.typ  limitations.typ  quick-start.typ
docs/templates/: constants.typ  ebook.typ  metadata.typ  page.typ  rules.typ  version.typ
playground/: .gitignore  .prettierrc  README.md  biome.json  biome.jsonc  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
playground/src/: App.tsx  Playground.tsx  constants.ts  (+2 more)
tests/: Cargo.toml
(+449 files in other folders)
